--- a/index.html
+++ b/index.html
@@ -129,13 +129,13 @@
                                 <div class="btns-blue-1">
                                     <label>
                                         <input type="radio" name="selectScale" value="350" />
-                                        <span><h5>350</h5></span>
+                                        <span><h3>350</h3></span>
                                     </label>
                                 </div>
                                 <div class="btns-blue-2">
                                     <label>
                                         <input type="radio" name="selectScale" value="150" />
-                                        <span><h5>150</h5></span>
+                                        <span><h3>150</h3></span>
                                     </label>
                                 </div>
                             </div>
@@ -539,15 +539,12 @@
                                             </div>
                                             <div class="signal c-4">
                                                 <span class="border"></span>
-                                                <span class="tinhieu"></span>
                                             </div>
                                             <div class="signal c-4">
                                                 <span class="border"></span>
-                                                <span class="tinhieu"></span>
                                             </div>
                                             <div class="signal c-4">
                                                 <span class="border"></span>
-                                                <span class="tinhieu"></span>
                                             </div>
                                             <div class="signal c-4">
                                                 <span class="border"></span>
@@ -560,6 +557,14 @@
                                             <div class="signal">
                                                 <h3>H</h3>
                                             </div>
+                                            <div class="point-target">
+                                                <span class="tinhieu"></span>
+                                                <span class="tucthoi"></span>
+                                                <span class="diemdau"></span>
+                                                <span class="gap-tenlua1"></span>
+                                                <span class="gap-tenlua2"></span>
+                                                <span class="damage-limit"></span>
+                                            </div>
                                         </div>
                                         <div class="row-signal row hide-signal">
                                             <div class="signal">
@@ -568,15 +573,12 @@
                                             </div>
                                             <div class="signal c-4">
                                                 <span class="border"></span>
-                                                <span class="tinhieu"></span>
                                             </div>
                                             <div class="signal c-4">
                                                 <span class="border"></span>
-                                                <span class="tinhieu"></span>
                                             </div>
                                             <div class="signal c-4">
                                                 <span class="border"></span>
-                                                <span class="tinhieu"></span>
                                             </div>
                                             <div class="signal c-4">
                                                 <span class="border"></span>
@@ -589,6 +591,15 @@
                                             <div class="signal">
                                                 <h3>H</h3>
                                             </div>
+                                            <div class="point-target">
+                                                <span class="border"></span>
+                                                <span class="tinhieu"></span>
+                                                <span class="tucthoi"></span>
+                                                <span class="diemdau"></span>
+                                                <span class="gap-tenlua1"></span>
+                                                <span class="gap-tenlua2"></span>
+                                                <span class="damage-limit"></span>
+                                            </div>
                                         </div>
                                         <div class="row-signal row hide-signal">
                                             <div class="signal">
@@ -597,15 +608,12 @@
                                             </div>
                                             <div class="signal c-4">
                                                 <span class="border"></span>
-                                                <span class="tinhieu"></span>
                                             </div>
                                             <div class="signal c-4">
                                                 <span class="border"></span>
-                                                <span class="tinhieu"></span>
                                             </div>
                                             <div class="signal c-4">
                                                 <span class="border"></span>
-                                                <span class="tinhieu"></span>
                                             </div>
                                             <div class="signal c-4">
                                                 <span class="border"></span>
@@ -618,6 +626,15 @@
                                             <div class="signal">
                                                 <h3>H</h3>
                                             </div>
+                                            <div class="point-target">
+                                                <span class="border"></span>
+                                                <span class="tinhieu"></span>
+                                                <span class="tucthoi"></span>
+                                                <span class="diemdau"></span>
+                                                <span class="gap-tenlua1"></span>
+                                                <span class="gap-tenlua2"></span>
+                                                <span class="damage-limit"></span>
+                                            </div>
                                         </div>
                                         <div class="row-signal row hide-signal">
                                             <div class="signal">
@@ -626,15 +643,12 @@
                                             </div>
                                             <div class="signal c-4">
                                                 <span class="border"></span>
-                                                <span class="tinhieu"></span>
                                             </div>
                                             <div class="signal c-4">
                                                 <span class="border"></span>
-                                                <span class="tinhieu"></span>
                                             </div>
                                             <div class="signal c-4">
                                                 <span class="border"></span>
-                                                <span class="tinhieu"></span>
                                             </div>
                                             <div class="signal c-4">
                                                 <span class="border"></span>
@@ -647,6 +661,15 @@
                                             <div class="signal">
                                                 <h3>H</h3>
                                             </div>
+                                            <div class="point-target">
+                                                <span class="border"></span>
+                                                <span class="tinhieu"></span>
+                                                <span class="tucthoi"></span>
+                                                <span class="diemdau"></span>
+                                                <span class="gap-tenlua1"></span>
+                                                <span class="gap-tenlua2"></span>
+                                                <span class="damage-limit"></span>
+                                            </div>
                                         </div>
                                         <div class="row-signal row hide-signal">
                                             <div class="signal">
@@ -655,15 +678,12 @@
                                             </div>
                                             <div class="signal c-4">
                                                 <span class="border"></span>
-                                                <span class="tinhieu"></span>
                                             </div>
                                             <div class="signal c-4">
                                                 <span class="border"></span>
-                                                <span class="tinhieu"></span>
                                             </div>
                                             <div class="signal c-4">
                                                 <span class="border"></span>
-                                                <span class="tinhieu"></span>
                                             </div>
                                             <div class="signal c-4">
                                                 <span class="border"></span>
@@ -676,6 +696,15 @@
                                             <div class="signal">
                                                 <h3>H</h3>
                                             </div>
+                                            <div class="point-target">
+                                                <span class="border"></span>
+                                                <span class="tinhieu"></span>
+                                                <span class="tucthoi"></span>
+                                                <span class="diemdau"></span>
+                                                <span class="gap-tenlua1"></span>
+                                                <span class="gap-tenlua2"></span>
+                                                <span class="damage-limit"></span>
+                                            </div>
                                         </div>
                                         <div class="row-signal row hide-signal">
                                             <div class="signal">
@@ -684,17 +713,14 @@
                                             </div>
                                             <div class="signal c-4">
                                                 <span class="border"></span>
-                                                <span class="tinhieu"></span>
                                                 <h5>50</h5>
                                             </div>
                                             <div class="signal c-4">
                                                 <span class="border"></span>
-                                                <span class="tinhieu"></span>
                                                 <h5>100</h5>
                                             </div>
                                             <div class="signal c-4">
                                                 <span class="border"></span>
-                                                <span class="tinhieu"></span>
                                                 <h5>150</h5>
                                             </div>
                                             <div class="signal c-4">
@@ -709,6 +735,15 @@
                                             </div>
                                             <div class="signal">
                                                 <h3>H</h3>
+                                            </div>
+                                            <div class="point-target">
+                                                <span class="border"></span>
+                                                <span class="tinhieu"></span>
+                                                <span class="tucthoi"></span>
+                                                <span class="diemdau"></span>
+                                                <span class="gap-tenlua1"></span>
+                                                <span class="gap-tenlua2"></span>
+                                                <span class="damage-limit"></span>
                                             </div>
                                         </div>
                                     </div>
@@ -1024,7 +1059,7 @@
                                     </div>
                                     <div class="sum-bullet">
                                         <div class="triangle-solid"></div>
-                                        <span class="pencil-notice">48</span>
+                                        <div class="pencil-notice"><h3>48</h3></div>
                                     </div>
                                 </div>
                             </div>
@@ -1057,13 +1092,13 @@
                             <div class="btns-white btn-footer">
                                 <label>
                                     <input type="checkbox" name="check" />
-                                    <span></span>
+                                    <span>&uarr;</span>
                                 </label>
                             </div>
                             <div class="btns-white btn-footer">
                                 <label>
                                     <input type="checkbox" name="check" />
-                                    <span></span>
+                                    <span>&rarr;</span>
                                 </label>
                             </div>
                         </div>
